# versus-pong

./: .gitignore  CMakeLists.txt  README.md
scripts/: rebuild.bat
src/: client.cpp  entities.h  entities_server.h  game.cpp  game.h  gamestate.h  gamestate_server.h  main.cpp  pong.cpp  server.cpp
